styles.css
/* ... */
@media screen and (max-width: 960px) {
    .products {
        height: 2400px;
    }

    .products h1 {
        font-size: 2rem;
        margin-top: 35rem;
    }
}

@media screen and (max-width: 480px) {
    .products {
        height: 2400px;
    }

    .products h1 {
        font-size: 1.2rem;
    }

    .products__card {
        width: 300px;
    }
}

/* Footer Section CSS */

.footer__container {
    background-color: #1f1827;
    padding: 2rem 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#footer__logo {
    background-color: #59146c;
    background-image: linear-gradient(to top, #c227ec 0%, #4d175c 100%);
    background-size: 100%;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
    display: flex;
    align-items: center;
    cursor: pointer;
    text-decoration: none;
    font-size: 2rem;
    font-family: 'Righteous', cursive;
}

.footer__links {
    width: 100%;
    max-width: 1000px;
    display: flex;
    justify-content: center;
}

.footer__link--wrapper {
    display: flex;
}

.footer__link--items {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin: 16px;
    text-align: left;
    width: 160px;
    box-sizing: border-box;
    color: #8f55c3;
}

.footer__link--items h2 {
    margin-bottom: 16px;
}

.footer__link--items > h2 {
    color: #fff;
}

.footer__link--items a {
    color: #fff;
    text-decoration: none;
    margin-bottom: 0.5rem;
}

.footer__link--items a:hover {
    color: #c227ec;
    transition: all 0.3s ease-in;
}

@media screen and (max-width: 820px) {
    .footer__links {
        padding-top: 2rem;
    }

    #footer__logo {
        margin-bottom: 2rem;
    }

    .website-right {
        margin-bottom: 2rem;
    }

    .footer__link--wrapper {
        flex-direction: column;
    }
}

@media screen and (max-width: 480px) {
    .footer__link--items {
        margin: 0;
        padding: 10px;
        width: 100%;
    }
}

.about__devs--btn {
    display:block;
    height: 150px;
    width: 150px;
    border-radius: 50%;
    border: 5px;
    background-color: #59146c;
  }

::-webkit-scrollbar {
    width: 10px;
  }
  
::-webkit-scrollbar-track {
    background: #424242; 
  }
   
::-webkit-scrollbar-thumb {
    background: #6f3e99; 
  }
  
::-webkit-scrollbar-thumb:hover {
    background: #502e6d; 
  }

